test/sensitive-data/nginx/nginx-1.15.9/objs/autoconf.err


----------------------------------------
checking for C compiler


----------------------------------------
checking for --with-ld-opt="-O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r"


----------------------------------------
checking for -Wl,-E switch


----------------------------------------
checking for gcc builtin atomic operations


----------------------------------------
checking for C99 variadic macros


----------------------------------------
checking for gcc variadic macros


----------------------------------------
checking for gcc builtin 64 bit byteswap


----------------------------------------
checking for unistd.h


----------------------------------------
checking for inttypes.h


----------------------------------------
checking for limits.h


----------------------------------------
checking for sys/filio.h

objs/autotest.c:3:10: fatal error: 'sys/filio.h' file not found
#include <sys/filio.h>
         ^~~~~~~~~~~~~
1 error generated.
----------


#include <sys/filio.h>

int main(void) {
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -o objs/autotest objs/autotest.c
----------

----------------------------------------
checking for sys/param.h


----------------------------------------
checking for sys/mount.h


----------------------------------------
checking for sys/statvfs.h


----------------------------------------
checking for crypt.h


----------------------------------------
checking for epoll


----------------------------------------
checking for EPOLLRDHUP


----------------------------------------
checking for EPOLLEXCLUSIVE

objs/autotest.c:9:43: error: use of undeclared identifier 'EPOLLEXCLUSIVE'
                      ee.events = EPOLLIN|EPOLLEXCLUSIVE;
                                          ^
1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/epoll.h>

int main(void) {
    int efd = 0, fd = 0;
                      struct epoll_event ee;
                      ee.events = EPOLLIN|EPOLLEXCLUSIVE;
                      ee.data.ptr = NULL;
                      epoll_ctl(efd, EPOLL_CTL_ADD, fd, &ee);
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for O_PATH


----------------------------------------
checking for sendfile()


----------------------------------------
checking for sendfile64()


----------------------------------------
checking for sys/prctl.h


----------------------------------------
checking for prctl(PR_SET_DUMPABLE)


----------------------------------------
checking for prctl(PR_SET_KEEPCAPS)


----------------------------------------
checking for capabilities


----------------------------------------
checking for crypt_r()


----------------------------------------
checking for sys/vfs.h


----------------------------------------
checking for poll()


----------------------------------------
checking for /dev/poll

objs/autotest.c:4:10: fatal error: 'sys/devpoll.h' file not found
#include <sys/devpoll.h>
         ^~~~~~~~~~~~~~~
1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/devpoll.h>

int main(void) {
    int  n, dp; struct dvpoll  dvp;
                  dp = 0;
                  dvp.dp_fds = NULL;
                  dvp.dp_nfds = 0;
                  dvp.dp_timeout = 0;
                  n = ioctl(dp, DP_POLL, &dvp);
                  if (n == -1) return 1;
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for kqueue

objs/autotest.c:4:10: fatal error: 'sys/event.h' file not found
#include <sys/event.h>
         ^~~~~~~~~~~~~
1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/event.h>

int main(void) {
    (void) kqueue();
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for crypt()

objs/autotest.o:ld-temp.o:function main: error: undefined reference to 'crypt'
clang-7: error: linker command failed with exit code 1 (use -v to see invocation)
----------

#include <sys/types.h>
#include <unistd.h>


int main(void) {
    crypt("test", "salt");;
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for crypt() in libcrypt


----------------------------------------
checking for F_READAHEAD

objs/autotest.c:7:14: error: use of undeclared identifier 'F_READAHEAD'
    fcntl(0, F_READAHEAD, 1);;
             ^
1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <fcntl.h>

int main(void) {
    fcntl(0, F_READAHEAD, 1);;
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for posix_fadvise()


----------------------------------------
checking for O_DIRECT


----------------------------------------
checking for F_NOCACHE

objs/autotest.c:7:14: error: use of undeclared identifier 'F_NOCACHE'
    fcntl(0, F_NOCACHE, 1);;
             ^
1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <fcntl.h>

int main(void) {
    fcntl(0, F_NOCACHE, 1);;
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for directio()

objs/autotest.c:8:5: warning: implicit declaration of function 'directio' is invalid in C99 [-Wimplicit-function-declaration]
    directio(0, DIRECTIO_ON);;
    ^
objs/autotest.c:8:17: error: use of undeclared identifier 'DIRECTIO_ON'
    directio(0, DIRECTIO_ON);;
                ^
1 warning and 1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/types.h>
                  #include <sys/fcntl.h>

int main(void) {
    directio(0, DIRECTIO_ON);;
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for statfs()


----------------------------------------
checking for statvfs()


----------------------------------------
checking for dlopen()

objs/autotest.o:ld-temp.o:function main: error: undefined reference to 'dlopen'
objs/autotest.o:ld-temp.o:function main: error: undefined reference to 'dlsym'
clang-7: error: linker command failed with exit code 1 (use -v to see invocation)
----------

#include <sys/types.h>
#include <unistd.h>
#include <dlfcn.h>

int main(void) {
    dlopen(NULL, RTLD_NOW | RTLD_GLOBAL); dlsym(NULL, "");
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for dlopen() in libdl

objs/autotest.o:ld-temp.o:function main: warning: Using 'dlopen' in statically linked applications requires at runtime the shared libraries from the glibc version used for linking

----------------------------------------
checking for sched_yield()


----------------------------------------
checking for sched_setaffinity()


----------------------------------------
checking for SO_SETFIB

objs/autotest.c:7:31: error: use of undeclared identifier 'SO_SETFIB'
    setsockopt(0, SOL_SOCKET, SO_SETFIB, NULL, 0);
                              ^
1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>

int main(void) {
    setsockopt(0, SOL_SOCKET, SO_SETFIB, NULL, 0);
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for SO_REUSEPORT


----------------------------------------
checking for SO_ACCEPTFILTER

objs/autotest.c:7:31: error: use of undeclared identifier 'SO_ACCEPTFILTER'
    setsockopt(0, SOL_SOCKET, SO_ACCEPTFILTER, NULL, 0);
                              ^
1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>

int main(void) {
    setsockopt(0, SOL_SOCKET, SO_ACCEPTFILTER, NULL, 0);
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for SO_BINDANY

objs/autotest.c:7:31: error: use of undeclared identifier 'SO_BINDANY'
    setsockopt(0, SOL_SOCKET, SO_BINDANY, NULL, 0);
                              ^
1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>

int main(void) {
    setsockopt(0, SOL_SOCKET, SO_BINDANY, NULL, 0);
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for IP_TRANSPARENT


----------------------------------------
checking for IP_BINDANY

objs/autotest.c:8:31: error: use of undeclared identifier 'IP_BINDANY'
    setsockopt(0, IPPROTO_IP, IP_BINDANY, NULL, 0);
                              ^
1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>
                  #include <netinet/in.h>

int main(void) {
    setsockopt(0, IPPROTO_IP, IP_BINDANY, NULL, 0);
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for IP_BIND_ADDRESS_NO_PORT


----------------------------------------
checking for IP_RECVDSTADDR

objs/autotest.c:8:31: error: use of undeclared identifier 'IP_RECVDSTADDR'
    setsockopt(0, IPPROTO_IP, IP_RECVDSTADDR, NULL, 0);
                              ^
1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>
                  #include <netinet/in.h>

int main(void) {
    setsockopt(0, IPPROTO_IP, IP_RECVDSTADDR, NULL, 0);
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for IP_SENDSRCADDR

objs/autotest.c:8:31: error: use of undeclared identifier 'IP_SENDSRCADDR'
    setsockopt(0, IPPROTO_IP, IP_SENDSRCADDR, NULL, 0);
                              ^
1 error generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <sys/socket.h>
                  #include <netinet/in.h>

int main(void) {
    setsockopt(0, IPPROTO_IP, IP_SENDSRCADDR, NULL, 0);
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for IP_PKTINFO


----------------------------------------
checking for IPV6_RECVPKTINFO


----------------------------------------
checking for TCP_DEFER_ACCEPT


----------------------------------------
checking for TCP_KEEPIDLE


----------------------------------------
checking for TCP_FASTOPEN


----------------------------------------
checking for TCP_INFO


----------------------------------------
checking for accept4()


----------------------------------------
checking for eventfd()


----------------------------------------
checking for int size


----------------------------------------
checking for long size


----------------------------------------
checking for long long size


----------------------------------------
checking for void * size


----------------------------------------
checking for uint32_t


----------------------------------------
checking for uint64_t


----------------------------------------
checking for sig_atomic_t


----------------------------------------
checking for sig_atomic_t size


----------------------------------------
checking for socklen_t


----------------------------------------
checking for in_addr_t


----------------------------------------
checking for in_port_t


----------------------------------------
checking for rlim_t


----------------------------------------
checking for uintptr_t


----------------------------------------
checking for system byte ordering


----------------------------------------
checking for size_t size


----------------------------------------
checking for off_t size


----------------------------------------
checking for time_t size


----------------------------------------
checking for AF_INET6


----------------------------------------
checking for setproctitle()

objs/autotest.c:7:5: warning: implicit declaration of function 'setproctitle' is invalid in C99 [-Wimplicit-function-declaration]
    setproctitle("test");;
    ^
1 warning generated.
objs/autotest.o:ld-temp.o:function main: error: undefined reference to 'setproctitle'
clang-7: error: linker command failed with exit code 1 (use -v to see invocation)
----------

#include <sys/types.h>
#include <unistd.h>
#include <stdlib.h>

int main(void) {
    setproctitle("test");;
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for pread()


----------------------------------------
checking for pwrite()


----------------------------------------
checking for pwritev()


----------------------------------------
checking for sys_nerr

objs/autotest.o:ld-temp.o:function main: warning: `sys_nerr' is deprecated; use `strerror' or `strerror_r' instead
135
----------------------------------------
checking for localtime_r()


----------------------------------------
checking for clock_gettime(CLOCK_MONOTONIC)


----------------------------------------
checking for posix_memalign()


----------------------------------------
checking for memalign()


----------------------------------------
checking for mmap(MAP_ANON|MAP_SHARED)


----------------------------------------
checking for mmap("/dev/zero", MAP_SHARED)


----------------------------------------
checking for System V shared memory


----------------------------------------
checking for POSIX semaphores

objs/autotest.o:ld-temp.o:function main: error: undefined reference to 'sem_init'
objs/autotest.o:ld-temp.o:function main: error: undefined reference to 'sem_destroy'
clang-7: error: linker command failed with exit code 1 (use -v to see invocation)
----------

#include <sys/types.h>
#include <unistd.h>
#include <semaphore.h>

int main(void) {
    sem_t  sem;
                  if (sem_init(&sem, 1, 0) == -1) return 1;
                  sem_destroy(&sem);;
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for POSIX semaphores in libpthread


----------------------------------------
checking for struct msghdr.msg_control


----------------------------------------
checking for ioctl(FIONBIO)


----------------------------------------
checking for struct tm.tm_gmtoff


----------------------------------------
checking for struct dirent.d_namlen

objs/autotest.c:8:29: error: no member named 'd_namlen' in 'struct dirent'; did you mean 'd_name'?
    struct dirent  dir; dir.d_namlen = 0;
                            ^~~~~~~~
                            d_name
/usr/include/x86_64-linux-gnu/bits/dirent.h:33:10: note: 'd_name' declared here
    char d_name[256];           /* We must not include limits.h! */
         ^
objs/autotest.c:8:38: error: array type 'char [256]' is not assignable
    struct dirent  dir; dir.d_namlen = 0;
                        ~~~~~~~~~~~~ ^
objs/autotest.c:9:42: error: no member named 'd_namlen' in 'struct dirent'; did you mean 'd_name'?
                  printf("%d", (int) dir.d_namlen);
                                         ^~~~~~~~
                                         d_name
/usr/include/x86_64-linux-gnu/bits/dirent.h:33:10: note: 'd_name' declared here
    char d_name[256];           /* We must not include limits.h! */
         ^
3 errors generated.
----------

#include <sys/types.h>
#include <unistd.h>
#include <dirent.h>
                  #include <stdio.h>

int main(void) {
    struct dirent  dir; dir.d_namlen = 0;
                  printf("%d", (int) dir.d_namlen);
    return 0;
}

----------
/mnt/Projects/LLVM-custom/build-partition/bin/clang -pipe -O0 -flto -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -o objs/autotest objs/autotest.c -O0 -flto -static -L/mnt/Projects/LLVM-custom/test/sensitive-data/openssl-1.0.2r
----------

----------------------------------------
checking for struct dirent.d_type


----------------------------------------
checking for sysconf(_SC_NPROCESSORS_ONLN)


----------------------------------------
checking for sysconf(_SC_LEVEL1_DCACHE_LINESIZE)


----------------------------------------
checking for openat(), fstatat()


----------------------------------------
checking for getaddrinfo()

objs/autotest.o:ld-temp.o:function main: warning: Using 'getaddrinfo' in statically linked applications requires at runtime the shared libraries from the glibc version used for linking

----------------------------------------
checking for OpenSSL library

objs/autotest.o:ld-temp.o:function dlfcn_load: warning: Using 'dlopen' in statically linked applications requires at runtime the shared libraries from the glibc version used for linking
objs/autotest.o:ld-temp.o:function dlfcn_globallookup: warning: Using 'dlopen' in statically linked applications requires at runtime the shared libraries from the glibc version used for linking
